--- a/style.css
+++ b/style.css
@@ -42,21 +42,21 @@ span:hover {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 200px;
+  height: 25rem;
   text-align: center;
 }
+
 .header h1 {
   font-family: "Belanosima", sans-serif;
-  font-size: 3.5rem;
-
+  font-size: 7rem;
   -webkit-text-fill-color: var(--color-principal);
   -webkit-text-stroke: 1px var(--color-fondo);
 }
+
 .header p {
   font-size: 1.5rem;
   color: var(--color-fondo);
@@ -65,17 +65,22 @@ span:hover {
 }
 
 .somos {
-  height: 10%;
-  padding: 2px;
+  padding: 2rem;
+
   background-color: var(--color-footer);
   color: var(--color-fondo);
   text-align: center;
   justify-content: center;
 }
 
-.somos:hover {
+div.somos:hover {
   transition: all 0.2s ease-in;
   background-color: var(--color-secundario);
+}
+
+.somos img {
+  width: 10rem;
+  border-radius: 50%;
 }
 
 .titulo {
@@ -97,6 +102,7 @@ span:hover {
   background-color: var(--color-footer);
   justify-content: space-evenly;
 }
+
 .imagDescriptiva {
   width: 100%;
   padding-top: 1rem;
@@ -186,6 +192,7 @@ button[type="submit"] {
   box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
   margin-bottom: 10px;
 }
+
 button[type="reset"] {
   padding: 19px 39px 18px 39px;
   color: var(--color-fondo);
@@ -239,6 +246,7 @@ i:hover {
   transition: all 0.2s ease-in;
   color: var(--color-principal);
 }
+
 .row {
   align-items: center;
   justify-content: space-evenly;
@@ -250,10 +258,35 @@ i:hover {
   .navbar-brand {
     display: none;
   }
+
+  .header h1 {
+    font-size: 3.5rem;
+  }
 }
 
 @media screen and (min-width: 320px) {
   form {
     max-width: 480px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .header p {
+    margin: 1rem;
+    padding: 0;
+  }
+
+  .header h1 {
+    font-size: 3rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    .somos {
+      padding: 1rem;
+    }
+
+    .somos img {
+      width: 5rem;
+    }
   }
 }
